--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur error atque autem saepe maxime, expedita unde rem quas dolor fugiat dolorem ex exercitationem a? Sunt officia reiciendis odit expedita accusantium!
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/ui-ux.png" alt="ui-ux">
         </div>
     </section>
     <section class="event event--data-science">
@@ -71,7 +71,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur error atque autem saepe maxime, expedita unde rem quas dolor fugiat dolorem ex exercitationem a? Sunt officia reiciendis odit expedita accusantium!
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/data.png" alt="data science">
         </div>
     </section>
     <section class="event event--backend event--image-left">
@@ -82,7 +82,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur error atque autem saepe maxime, expedita unde rem quas dolor fugiat dolorem ex exercitationem a? Sunt officia reiciendis odit expedita accusantium!
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/backend.png" alt="backend">
         </div>
     </section>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
